@@ -4,13 +4,12 @@ import com.sopromadze.blogapi.model.user.User;
 import com.sopromadze.blogapi.repository.UserRepository;
 import com.sopromadze.blogapi.security.UserPrincipal;
 import com.sopromadze.blogapi.service.CustomUserDetailsService;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import javax.transaction.Transactional;
 
 @Service
 public class CustomUserDetailsServiceImpl implements UserDetailsService, CustomUserDetailsService {
@@ -21,14 +20,14 @@ public class CustomUserDetailsServiceImpl implements UserDetailsService, CustomU
 	@Transactional
 	public UserDetails loadUserByUsername(String usernameOrEmail) {
 		User user = userRepository.findByUsernameOrEmail(usernameOrEmail, usernameOrEmail)
-				.orElseThrow(() -> new UsernameNotFoundException(String.format("User not found with this username or email: %s", usernameOrEmail)));
+				.orElseThrow(() -> new UsernameNotFoundException("User not found with this username or email: %s".formatted(usernameOrEmail)));
 		return UserPrincipal.create(user);
 	}
 
 	@Override
 	@Transactional
 	public UserDetails loadUserById(Long id) {
-		User user = userRepository.findById(id).orElseThrow(() -> new UsernameNotFoundException(String.format("User not found with id: %s", id)));
+		User user = userRepository.findById(id).orElseThrow(() -> new UsernameNotFoundException("User not found with id: %s".formatted(id)));
 
 		return UserPrincipal.create(user);
 	}
